force-app/main/default/objects/Knowledge__kav/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description
  >Full chunk text. Indexed by Knowledge search and by Data Cloud Vector DB.</description>
    <label>Body</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>