force-app/main/default/objects/Knowledge__kav/fields/EntityType__c.field-meta.xml
<CustomField>
    <fullName>EntityType__c</fullName>
    <description
  >player | club | manager. Lets the agent scope semantic search.</description>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>player</fullName><default>false</default></value>
            <value><fullName>club</fullName><default>false</default></value>
            <value><fullName>manager</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>