force-app/main/default/objects/Knowledge__kav/fields/SourceUrl__c.field-meta.xml
<CustomField>
    <fullName>SourceUrl__c</fullName>
    <description
  >Source URL for the originating Wikipedia article; used for citations in agent responses.</description>
    <inlineHelpText>https://en.wikipedia.org/wiki/...</inlineHelpText>
    <label>Source URL</label>
    <length>500</length>
    <type>Url</type>
</CustomField>