force-app/main/default/objects/Knowledge__kav/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description
  >First 255 chars of the chunk; used as the agent's display snippet.</description>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>